syntax = "proto3";

package tracker.event.v1alpha1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

option go_package = "proto/event/v1alpha1";

service EventService {
  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
    option (google.api.http) = {
      post: "/api/v1alpha1/event"
      body: "*"
    };
  }
  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
    option (google.api.http) = {
      put: "/api/v1alpha1/event"
      body: "*"
    };
  }
  rpc DeleteEvents(DeleteEventRequest) returns (DeleteEventResponse) {
    option (google.api.http) = {
      delete: "/api/v1alpha1/event/{id}"
    };
  }
  rpc GetEvent(GetEventRequest) returns (GetEventResponse) {
    option (google.api.http) = {get: "/api/v1alpha1/event/{id}"};
  }
  rpc SearchEvents(SearchEventsRequest) returns (SearchEventsResponse) {
    option (google.api.http) = {get: "/api/v1alpha1/events/search"};
  }
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse) {
    option (google.api.http) = {get: "/api/v1alpha1/events/list"};
  }
  rpc TodayEvents(TodayEventsRequest) returns (TodayEventsResponse) {
    option (google.api.http) = {get: "/api/v1alpha1/events/today"};
  }
}

message EventAttributes {
  string message = 1;
  string source = 2;
  Type type = 3;
  Priority priority = 4;
  string related_id = 5 [(validate.rules).string = {uuid: true}];
  string service = 6;
  Status status = 7;
  Environment environment = 8;
  bool impact = 9;
  google.protobuf.Timestamp start_date = 10;
  google.protobuf.Timestamp end_date = 11;
  string owner = 12;
  repeated string stakeHolders = 13;
  bool notification = 14;
  repeated string notifications = 15;
}

message EventMetadata {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Duration duration = 2;
  string id = 3 [(validate.rules).string = {uuid: true}];
  string slack_id = 4;
}

message EventLinks {
  string pull_request_link = 1;
  string ticket= 2;
}

message Event {
  string title = 1;
  EventAttributes attributes = 2;
  EventLinks links = 3;
  EventMetadata metadata = 4;
}

message CreateEventRequest {
  string title = 1;
  EventAttributes attributes = 2;
  EventLinks links = 3;
  string slack_id = 4;
}

message CreateEventResponse {
  Event event = 1;
}

message GetEventRequest {
  string id = 1;
}

message GetEventResponse {
  Event event = 1;
}

message SearchEventsRequest {
  string source = 1;
  Type type = 2;
  Priority priority = 3;
  Status status = 4;
  string service = 5;
  string start_date = 6;
  string end_date = 7;
  Environment environment = 8;
  bool impact = 9;
  string slack_id = 10;
}

message SearchEventsResponse {
  repeated Event events = 1;
  uint32 total_count = 2;
}

message ListEventsRequest {
  google.protobuf.UInt32Value per_page = 1;
  google.protobuf.Int32Value page = 2;
}

message ListEventsResponse {
  repeated Event events = 1;
  uint32 total_count = 2;
}

message TodayEventsRequest {
  google.protobuf.UInt32Value per_page = 1;
  google.protobuf.Int32Value page = 2;
}

message TodayEventsResponse {
  repeated Event events = 1;
  uint32 total_count = 2;
}

message UpdateEventRequest {
  string title = 1;
  EventAttributes attributes = 2;
  EventLinks links = 3;
  string slack_id = 4;
}

message UpdateEventResponse {
  Event event = 1;
}

message DeleteEventRequest {
  string id = 1;
  string slack_id = 2;
}

message DeleteEventResponse {
  string id = 1;
  string slack_id = 2;
}

enum Type {
  TYPE_UNSPECIFIED = 0;
  deployment = 1;
  operation = 2;
}

enum Priority {
  PRIORITY_UNSPECIFIED = 0;
  P1 = 1;
  P2 = 2;
  P3 = 3;
  P4 = 4;
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  start = 1;
  failure = 2;
  success = 3;
  warning = 4;
  error = 5;
  snapshot = 6;
  user_update = 7;
  recommandation = 8;
}

enum Environment {
  ENVIRONMENT_UNSPECIFIED = 0;
  development = 1;
  integration = 2;
  TNR = 3;
  UAT = 4;
  recette = 5;
  preproduction = 6;
  production = 7;
  mco = 8;
}
